# Envoy-IDE

./: .gitignore  README.md  package-lock.json  package.json
apps/desktop/: electron.vite.config.ts  package.json  tsconfig.json
apps/desktop/electron/ipc/: runtime.ts
apps/desktop/electron/main/: index.ts
apps/desktop/electron/preload/: index.ts
apps/desktop/renderer/: index.html
apps/desktop/renderer/src/: App.tsx  styles.css  types.d.ts
apps/vscode-oss/: README.md  package.json  product.overrides.json
apps/vscode-oss/extensions/cytos-ml/: package-lock.json  package.json  (+1 more)
apps/vscode-oss/scripts/: bootstrap-vscode.mjs  build-vscode.mjs  cytos-shell.css  run-vscode.mjs  sync-cytos-layer.mjs  sync-envoy-layer.mjs
docs/: ARCHITECTURE.md  RUNBOOK.md  VSCODE_OSS_REBUILD.md
python/: pyproject.toml
python/axiom_engine/: store.py
python/axiom_engine/cli/: __init__.py  main.py
python/axiom_engine/dataset/: __init__.py  run.py
python/axiom_engine/evaluation/: run.py
python/axiom_engine/export/: __init__.py  run.py
python/axiom_engine/inspection/: __init__.py  model_inspector.py  run.py
python/axiom_engine/schemas/: __init__.py
python/axiom_engine/simulation/: __init__.py
python/cytos_engine/: __init__.py  engine.py  store.py
python/cytos_engine/cli/: __init__.py  main.py
python/cytos_engine/dataset/: run.py
python/cytos_engine/evaluation/: run.py
python/cytos_engine/export/: run.py
python/cytos_engine/inspection/: model_inspector.py  run.py
python/cytos_engine/schemas/: events.py
python/cytos_engine/simulation/: run.py
(+15 files in other folders)
