[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cytos-engine"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.8,<3.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["cytos_engine*"]
